# kokkos-tutorials

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  README.md
Exercises/: CMakeLists.txt  Makefile  README.md  SetUpKokkos.cmake  common.cmake
Exercises/.cmake/: FindKokkos.cmake
Exercises/01/: CMakeLists.txt
Exercises/01/Begin/: CMakeLists.txt  exercise_1_begin.cpp
Exercises/01/Solution/: CMakeLists.txt  exercise_1_solution.cpp
Exercises/02/: CMakeLists.txt
Exercises/02/Begin/: CMakeLists.txt  Makefile  exercise_2_begin.cpp
Exercises/02/Solution/: CMakeLists.txt  exercise_2_solution.cpp
Exercises/03/: CMakeLists.txt
Exercises/03/Begin/: CMakeLists.txt  exercise_3_begin.cpp
Exercises/03/Solution/: CMakeLists.txt  exercise_3_solution.cpp
Exercises/04/: CMakeLists.txt
Exercises/04/Begin/: CMakeLists.txt  exercise_4_begin.cpp
Exercises/04/Solution/: CMakeLists.txt  exercise_4_solution.cpp
Exercises/05/Solution/: CMakeLists.txt
Exercises/06/Begin/: exercise_6_begin.cpp
Exercises/08/Solution/: CMakeLists.txt
Exercises/09/Begin/: exercise_9_begin.cpp
Exercises/10/Begin/: CMakeLists.txt
Exercises/10/Solution/: CMakeLists.txt
Exercises/advanced_reductions/: CMakeLists.txt
Exercises/advanced_reductions/Begin/: CMakeLists.txt  advanced_reductions.cpp
Exercises/advanced_reductions/Solution/: CMakeLists.txt  advanced_reductions.cpp
Exercises/cmake/: FindKokkos.cmake  SetUpKokkos.cmake
Exercises/concepts/Begin/: CMakeLists.txt  concepts.cpp
Exercises/concepts/Solution/: concepts.cpp
Exercises/dualview/: CMakeLists.txt
Exercises/dualview/Begin/: CMakeLists.txt  dual_view_exercise.cpp  functors.hpp
Exercises/dualview/Solution/: CMakeLists.txt  dual_view_exercise.cpp  functors.hpp
Exercises/fortran-kokkosinterface/: CMakeLists.txt
Exercises/fortran-kokkosinterface/Begin/: CMakeLists.txt  abi.hpp  c_interface.cpp  compile.sh
Exercises/fortran-kokkosinterface/Solution/: CMakeLists.txt  abi.hpp  c_interface.cpp  f_interface.f90
Exercises/graph/Begin/: CMakeLists.txt  graph_begin.cpp
Exercises/graph/Solution/: CMakeLists.txt  graph_solution.cpp
Exercises/hpcbind/: Makefile  runtest  set_path
Exercises/instances/: CMakeLists.txt
Exercises/instances/Begin/: CMakeLists.txt  instances_begin.cpp
Exercises/instances/Solution/: CMakeLists.txt  Makefile  instances_solution.cpp
Exercises/kokkoskernels/: common.cmake
Exercises/mdrange/: CMakeLists.txt
Exercises/mdrange/Begin/: CMakeLists.txt  exercise_mdrange_begin.cpp
Exercises/mdrange/Solution/: CMakeLists.txt  Makefile  exercise_mdrange_solution.cpp
Exercises/mpi_exch/: CMakeLists.txt  mpi_exch.cpp
Exercises/mpi_heat_conduction/Begin/: CMakeLists.txt  Makefile  mpi_heat_conduction_begin.cpp
Exercises/mpi_heat_conduction/Solution/: CMakeLists.txt  mpi_heat_conduction_solution.cpp
Exercises/mpi_heat_conduction/no-mpi/: Makefile  mpi_heat_conduction.cpp
Exercises/mpi_pack_unpack/: Makefile
Exercises/mpi_pack_unpack/Begin/: CMakeLists.txt  Makefile  mpi_pack_unpack_begin.cpp
Exercises/mpi_pack_unpack/Solution/: CMakeLists.txt  Makefile  mpi_pack_unpack_solution.cpp
Exercises/multi_gpu_cuda/: CMakeLists.txt
Exercises/multi_gpu_cuda/Begin/: CMakeLists.txt  multi_gpu_cuda.cpp
Exercises/multi_gpu_cuda/Solution/: CMakeLists.txt  multi_gpu_cuda.cpp
Exercises/parallel_scan/: CMakeLists.txt
Exercises/parallel_scan/Begin/: CMakeLists.txt  parallel_scan.cpp
Exercises/parallel_scan/Solution/: CMakeLists.txt  parallel_scan.cpp
Exercises/random_number/: CMakeLists.txt  RNG-DemoExercises.pptx
Exercises/random_number/Begin/: CMakeLists.txt  MC_DartSampler.cpp  Makefile
Exercises/random_number/Solution/: CMakeLists.txt  MC_DartSampler.cpp  Makefile
Exercises/scatter_view/: CMakeLists.txt
Exercises/scatter_view/Begin/: CMakeLists.txt  scatter_view.cpp
Exercises/scatter_view/Solution/: CMakeLists.txt  Makefile  scatter_view.cpp
Exercises/scatter_view/Usage/: CMakeLists.txt  usage.cpp
Exercises/simd/: CMakeLists.txt
Exercises/simd/Begin/: CMakeLists.txt  simd_begin.cpp
Exercises/simd/Solution/: CMakeLists.txt  simd_solution.cpp
Exercises/simd_warp/: CMakeLists.txt
Exercises/simd_warp/Begin/: CMakeLists.txt  simd_warp_begin.cpp
Exercises/simd_warp/Solution/: CMakeLists.txt  Makefile  simd_warp_solution.cpp
Exercises/subview/: CMakeLists.txt
Exercises/subview/Begin/: CMakeLists.txt  exercise_subview_begin.cpp
Exercises/subview/Solution/: CMakeLists.txt  exercise_subview_solution.cpp
Exercises/tasking/: CMakeLists.txt
Exercises/tasking/Begin/: CMakeLists.txt  tasking.cpp  tasking_begin.cpp
Exercises/tasking/Solution/: CMakeLists.txt  Makefile  tasking_solution.cpp
Exercises/team_policy/: CMakeLists.txt
Exercises/team_policy/Begin/: CMakeLists.txt  team_policy_begin.cpp
Exercises/team_policy/Solution/: CMakeLists.txt  Makefile  team_policy_solution.cpp
Exercises/team_scratch_memory/: CMakeLists.txt
Exercises/team_scratch_memory/Begin/: CMakeLists.txt  team_scratch_memory_begin.cpp
Exercises/team_scratch_memory/Solution/: CMakeLists.txt  Makefile  team_scratch_memory_solution.cpp
Exercises/team_vector_loop/: CMakeLists.txt
Exercises/team_vector_loop/Begin/: CMakeLists.txt  Makefile  team_vector_loop_begin.cpp
Exercises/team_vector_loop/Solution/: CMakeLists.txt  team_vector_loop_solution.cpp
Exercises/tools_minimd/: CMakeLists.txt  Makefile  Makefile.no-mpi  atom.cpp  atom.h  buildminimd  comm.cpp  comm.h  force.h  force_eam.cpp  force_eam.h  force_lj.cpp  force_lj.h  in.eam-data.lammps  in.eam-data.miniMD  in.eam.lammps  in.eam.miniMD  in.eam.miniMD_comd  in.lj-data.lammps  in.lj-data.miniMD  in.lj.lammps  in.lj.miniMD  in.lj.miniMD_comd  input.cpp  integrate.cpp  integrate.h  ljs.cpp  ljs.h  neighbor.cpp  neighbor.h  out  output.cpp  run_one_test  run_tests  setup.cpp  thermo.cpp  thermo.h  timer.cpp  timer.h  types.h  (+1 more)
Exercises/unique_token/: CMakeLists.txt
Exercises/unique_token/Begin/: Makefile  (+2 more)
Exercises/unordered_map/: CMakeLists.txt
Exercises/vectorshift/: config.howto
Exercises/virtualfunction/: CMakeLists.txt
(+633 files in other folders)
